--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.2.0",
+    "@mui/x-date-pickers": "^8.11.1",
+    "dayjs": "^1.11.18",
     "html2canvas": "^1.4.1",
     "i18next": "^25.3.2",
     "react": "^19.1.0",
