--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.2.0",
+    "@tanstack/react-query": "^5.90.2",
     "html2canvas": "^1.4.1",
     "i18next": "^25.3.2",
     "react": "^19.1.0",
@@ -26,6 +27,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@tanstack/eslint-plugin-query": "^5.91.0",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
