--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_COUNTER_API=https://kan-ilani-olusturma-asistani-api.blackcliff-41caa7ea.westeurope.azurecontainerapps.io/counter
+VITE_COUNTER_API=https://kan-ilani-olusturma-asistani-api.kindriver-7d83c322.westeurope.azurecontainerapps.io/counter
