Update VITE_COUNTER_API URL

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_COUNTER_API=https://kan-ilani-olusturma-asistani-api.kindriver-7d83c322.westeurope.azurecontainerapps.io/counter
+VITE_COUNTER_API=https://web-tuo1o0yylnyt.up-de-fra1-k8s-1.apps.run-on-seenode.com/counter
