--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@mui/material": "^7.2.0",
     "html2canvas": "^1.4.1",
     "i18next": "^25.3.2",
+    "immer": "^11.1.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.6.1",
-    "sweetalert2": "^11.22.2"
+    "sweetalert2": "^11.22.2",
+    "use-immer": "^0.11.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
